<resources>
    <string name="app_name">Television Guru</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Television Guru</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sort">Sort</string>
    <string name="shuffle">Shuffle</string>
    <string name="clear">Clear</string>
    <string name="about">About</string>
    <string name="add_name">Add Name</string>
</resources>