<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FBFAFA"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:minWidth="216dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo_crown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/nav_header_title"
        android:textColor="@color/black"
        android:focusable="true" />


    <TextView
        android:id="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/add_name"
        android:clickable="true"
        android:textColor="@color/black"
        android:focusable="true" />

    <TextView
        android:id="@+id/addSort"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/sort"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/addShuffle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/shuffle"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/addClear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/clear"
        android:textColor="@color/black" />
</LinearLayout>